# Euclid-Ergon-testbed

./: .gitignore  GETTING_STARTED.md  README.md  STUDENT_GUIDE.md  activate.sh  pyproject.toml  register.py  requirements.txt
configs/: example.json
data_processes/: __init__.py  ais_processor.py  cbm_processor.py  example_processor.py
plugins/: __init__.py
plugins/aggregators/: example_aggregator.py
plugins/clients/: example_client.py
plugins/datasets/: example_dataset.py
plugins/models/: example_model.py  tabular_mlp.py
scripts/: collect_results.sh  deploy_student.sh  plot.sh  run_on_testbed.sh  start.sh  testbed_lock.sh
studies/: MARITIME_README.md  __init__.py  ais_experiment.py  cbm_experiment.py  example_experiment.py
testbed/: controller.config.example.json  launch.py  plot.py  prepare.py  run_sim.py  testbed.env.example
